force-app/main/default/objects/Delivery__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <description>Date the grain was delivered</description>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>