force-app/main/default/objects/Delivery__c/fields/Delivery_Mode__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Mode__c</fullName>
    <description>Picklist to indicate delivery mode of delivered grain, coming in from AGBOSS.</description>
    <label>Delivery Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Title Transfer</fullName>
            </value>
            <value>
                <fullName>Road</fullName>
            </value>
            <value>
                <fullName>Rail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>