force-app/main/default/objects/Delivery__c/fields/Delivery_Number__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Number__c</fullName>
    <description>Delivery Number to identify Delivery, coming in from AGBOSS.</description>
    <label>Delivery Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>