force-app/main/default/objects/Delivery__c/fields/Delivery_Quantity_Tonnes__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Quantity_Tonnes__c</fullName>
    <description>Delivery Quantity in Metric Tonnes</description>
    <inlineHelpText>In Metric Tonnes</inlineHelpText>
    <label>Delivery Quantity</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>