force-app/main/default/objects/Delivery__c/fields/External_Delivery_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Delivery_ID__c</fullName>
    <description>External Delivery ID, coming in from Microsoft AGBOSS</description>
    <label>External Delivery ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>