force-app/main/default/objects/Delivery__c/fields/Falling_Numbers_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Falling_Numbers_Seconds__c</fullName>
    <description>Number field to collect Falling Numbers in Seconds</description>
    <label>Falling Numbers (Seconds)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>