force-app/main/default/objects/Delivery__c/fields/Grain_Contract__c.field-meta.xml
<CustomField>
    <fullName>Grain_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Standard Contract Object to represent Grain Contracts, coming in from AGBOSS.</description>
    <label>Grain Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Deliveries</relationshipLabel>
    <relationshipName>Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>