force-app/main/default/objects/Delivery__c/fields/Moisture__c.field-meta.xml
<CustomField>
    <fullName>Moisture__c</fullName>
    <label>Moisture</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>