force-app/main/default/objects/Delivery__c/fields/Price_Per_Metric_Tonne__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Metric_Tonne__c</fullName>
    <description>Currency field to capture agreed upon AUD$/Metric Tonne for the delivery</description>
    <label>Price Per Metric Tonne</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>