force-app/main/default/objects/Delivery__c/fields/Protein_Level__c.field-meta.xml
<CustomField>
    <fullName>Protein_Level__c</fullName>
    <description>Number field to house Protein Content Measurement in Tested Grain</description>
    <label>Protein Level</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>