force-app/main/default/objects/Delivery__c/fields/Screenings__c.field-meta.xml
<CustomField>
    <fullName>Screenings__c</fullName>
    <description>Number field to house data for Screenings</description>
    <label>Screenings</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>