force-app/main/default/objects/Delivery__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <description>Text field to hold Seasonal Information in the form of &quot;YYYY-YYYY&quot; coming from AGBOSS.</description>
    <label>Season</label>
    <length>9</length>
    <type>Text</type>
</CustomField>