force-app/main/default/objects/Delivery__c/fields/Seller__c.field-meta.xml
<CustomField>
    <fullName>Seller__c</fullName>
    <description>Master-Detail Relationship with Account, so that, if a Site Manager or Grain Buying Lead is the owner or has access to an Account, access to that Account&apos;s deliveries are provided implicitly.</description>
    <label>Seller</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deliveries</relationshipLabel>
    <relationshipName>Deliveries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>