force-app/main/default/objects/Delivery__c/fields/Test_Weight__c.field-meta.xml
<CustomField>
    <fullName>Test_Weight__c</fullName>
    <description>Number field to hold the test weight of the delivery, coming from AGBOSS</description>
    <label>Test Weight</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>