force-app/main/default/objects/Delivery__c/fields/Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Number__c</fullName>
    <description>Text field to hold Delivery Ticket Number, coming from AGBOSS</description>
    <label>Ticket Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>