force-app/main/default/objects/Delivery__c/fields/Varietal_Grade__c.field-meta.xml
<CustomField>
    <fullName>Varietal_Grade__c</fullName>
    <description>Text field to hold Varietal Grade information, coming in from AGBOSS</description>
    <label>Varietal Grade</label>
    <length>10</length>
    <type>Text</type>
</CustomField>