force-app/main/default/objects/Delivery__c/fields/Vehicle_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Registration_Number__c</fullName>
    <description>Text field to hold Vehicle Registration Number of the Delivery Truck, coming in from AGBOSS</description>
    <label>Vehicle Registration Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>