force-app/main/default/objects/Delivery__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Seller__c</columns>
    <columns>Delivery_Date__c</columns>
    <columns>Site__c</columns>
    <columns>Bin_Grade__c</columns>
    <columns>Delivery_Quantity_Tonnes__c</columns>
    <columns>Price_Per_Metric_Tonne__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>